shitty adapted about & bonus pages

--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@
 					
 					<div class="col-sm-6">
 						<div class="dignity dignity-first">
-							<div class="row vertical-center">	
-								<div class="col-sm-4">
+							<div class="row">	
+								<div class="col-xs-12 col-sm-4">
 									<div class="dignity__image content"></div>
 								</div>
-								<div class="col-sm-8">
+								<div class="col-xs-12 col-sm-8">
 									<div class="dignity__text-wrapper">
 										<h3 class="dignity__header">Поддержка</h3>
 										<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
@@ -52,11 +52,11 @@
 
 					<div class="col-sm-6">
 						<div class="dignity dignity-second">
-							<div class="row vertical-center">
-								<div class="col-sm-4">
+							<div class="row">
+								<div class="col-xs-12 col-sm-4">
 									<div class="dignity__image content"></div>
 								</div>
-								<div class="col-sm-8">
+								<div class="col-xs-12 col-sm-8">
 									<div class="dignity__text-wrapper">
 										<h3 class="dignity__header">Доверие</h3>
 										<p class="dignity__text">Мы входим в крупнейшую сеть Softswiss. У нас только лицензионный софт. Доверие наших клиентов является нашим приоритетом.</p>
@@ -68,11 +68,11 @@
 
 					<div class="col-sm-6">
 						<div class="dignity dignity-third">
-							<div class="row vertical-center">
-								<div class="col-sm-4">
+							<div class="row">
+								<div class="col-xs-12 col-sm-4">
 									<div class="dignity__image content"></div>
 								</div>
-								<div class="col-sm-8">
+								<div class="col-xs-12 col-sm-8">
 									<div class="dignity__text-wrapper">
 										<h3 class="dignity__header">Молниеносные выплаты</h3>
 										<p class="dignity__text">Мы заботимся о том, что бы ваши победы стали реальными средствами меньше чем за час.</p>
@@ -84,11 +84,11 @@
 
 					<div class="col-sm-6">
 						<div class="dignity dignity-fourth">
-							<div class="row vertical-center">
-								<div class="col-sm-4">
+							<div class="row">
+								<div class="col-xs-12 col-sm-4">
 									<div class="dignity__image content"></div>
 								</div>
-								<div class="col-sm-8">
+								<div class="col-xs-12 col-sm-8">
 									<div class="dignity__text-wrapper">
 										<h3 class="dignity__header">Акции и бонусы</h3>
 										<p class="dignity__text">Уюху! Море бонусов и акций: приветственный бонус за регистрацию; reload бонус 50% в любой день; фри спины по четвергам , Слот дня по вторникам; 100% cashback, розыгрыш в понедельник; турнир по пятницам; 50% cashback в Live Casino!</p>
