--- a/bonus.html
+++ b/bonus.html
@@ -206,13 +206,13 @@
 						<span class="cashback__not-all">Это еще не все</span>
 					</div>
 
-					<div class="col-xs-6 col-sm-5 col-md-4">
+					<div class="col-xs-6 col-sm-5">
 						<p class="cashback__advantages">А так же вы получите <span class="cashback__red">3й уровень,</span> который даст вам массу <span class="cashback__dashed">преимуществ</span>
 							<a href="levels.html" class="cashback__question">?</a>
 						</p>
 					</div>
 
-					<div class="col-sm-12 col-md-4 text-center">
+					<div class="col-sm-12 col-md-4">
 						<button class="btn btn-danger btn-wide">Депозит сейчас</button>
 					</div>
 				</div>
@@ -424,45 +424,49 @@
 
 </div>
 
-<div class="fixed-bar">
-	<div class="fixed-bar__wrapper">
-		<div class="fixed-bar__hider"></div>
-		<div class="fixed-bar__shower hidden">
-			<p>Показать бар</p>
-		</div>
-		<div class="fixed-bar__top-games-button"><p id="topGamesBtn">Топ-игры</p></div>
-		<form action="#" class="search">
-			<input type="search" class="search__field" placeholder="Поиск">
-			<div class="search__close"></div>
-		</form>
-		<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container-fluid">
+			<div class="fixed-bar">
+				<div class="fixed-bar__wrapper">
+					<!-- <div class="fixed-bar__hider"></div>
+					<div class="fixed-bar__shower hidden">
+						<p>Показать бар</p>
+					</div> -->
+					<div class="fixed-bar__top-games-button"><p id="topGamesBtn">Топ-игры</p></div>
+					<form action="#" class="search">
+						<input type="search" class="search__field" placeholder="Поиск">
+						<div class="search__close"></div>
+					</form>
+					<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 
-		<div class="language_selector">
-			<div>
-				<button class="fixed-bar__language" type="button">
-					<span class="localeWrap">
-						<span class="flagContainer">
-							<img class="flagImg" src="./img/flags/flag-ru.png" alt="">
-						</span>
-						Русский
-					</span>
-					<span class="caret"></span>
-				</button>
-				<ul role="menu" class="language_selector__dropdown-menu">
-					<li class="language_selector__dropdown-menu-item">
-						<a class="localeWrap">
-							<span class="flagContainer">
-								<img class="flagImg" src="./img/flags/flag-en.png" alt="">
-							</span>
-							<span class="flagName">English</span>
-						</a>
-					</li>
-				</ul>
+					<div class="language_selector">
+						<div>
+							<button class="fixed-bar__language" type="button">
+								<span class="localeWrap">
+									<span class="flagContainer">
+										<img class="flagImg" src="./img/flags/flag-ru.png" alt="">
+									</span>
+									Русский
+								</span>
+								<span class="caret"></span>
+							</button>
+							<ul role="menu" class="language_selector__dropdown-menu">
+								<li class="language_selector__dropdown-menu-item">
+									<a class="localeWrap">
+										<span class="flagContainer">
+											<img class="flagImg" src="./img/flags/flag-en.png" alt="">
+										</span>
+										<span class="flagName">English</span>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
 			</div>
 		</div>
-
-	</div>
-</div>
+	</nav>
 
 <div id="preloader"></div>
 
