--- a/free-spins.html
+++ b/free-spins.html
@@ -30,7 +30,7 @@
 							<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте,  что для каждого игрока действует <a href="reload-bonus.html">Reload bonus</a>, который можно получить один раз в любой день недели.</p>
 						</div>
 
-						<button class="free-spins__button" id="free-spins-button">Правила и условия</button>
+						<button class="btn btn-danger btn-wide" id="free-spins-button">Правила и условия</button>
 					</div>
 					
 					<div class="col-sm-offset-1 col-sm-4">
@@ -71,7 +71,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="statistics__button-wrapper">
-							<button class="statistics__button">Регистрация</button>
+							<button class="btn btn-danger btn-wide">Регистрация</button>
 						</div>
 					</div>
 				</div>
@@ -80,7 +80,7 @@
 					<div class="col-sm-offset-1 col-sm-10">
 						<p class="statistics__text">Данное бонусное предложение доступно только для клиентов  "DARK SLOT". Акция проводится по (День недели) с 01:00 до 23:59 (МСК). Для  участия в акции, необходимо пополнить счет не менее чем на 20$, фри спины будут начислены на счет моментально. Каждый игрок Darkslot может принять участие в акции только один раз на протяжении четверга. Бонус доступен только для одного игрового счета, человека, семью, компьютер или IP-адрес. При подозрении о нарушениях путем множественных регистраций (поддельные счета) все бонусные средства и реальные будут аннулированы. Принимая бонус, клиент соглашается с бонусными условиями, а также с общими правилами и положениями "DARK SLOT", опубликованными на сайте Darkslot.com.</p>
 					</div>
-					</div>				
+				</div>				
 			</div>
 		</section>
 
