games section (tablet)

--- a/about.html
+++ b/about.html
@@ -383,9 +383,9 @@
 		<section class="games">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8">
+					<div class="col-md-8 col-sm-12 col-xs-12">
 						<div class="row">
-							<div class="col-md-3">
+							<div class="col-md-3 col-sm-4 col-xs-4">
 								<h2 class="games__header">Игры</h2>
 								<ul class="games__list">
 									<li class="games__item"><a href="#">NetEnt</a></li>
@@ -399,7 +399,7 @@
 									<li class="games__item"><a href="#">Live диллер</a></li>
 								</ul>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-4 col-sm-4 col-xs-4">
 								<h2 class="games__header">Акции</h2>
 								<ul class="games__list">
 									<li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
@@ -413,7 +413,7 @@
 									<li class="games__item"><a href="levels.html">Уровни игроков</a></li>
 								</ul>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-4 col-sm-4 col-xs-4">
 								<h2 class="games__header">О нас</h2>
 								<ul class="games__list">
 									<li class="games__item games__item--policy">Политика конфиденциальности</li>
@@ -426,7 +426,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-12 col-xs-12">
 						<div class="games__social text-right">
 							<span class="games__text">Следите за нами</span>
 							<div class="games__social-list">
